--- a/build.xml
+++ b/build.xml
@@ -1,237 +1,45 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project name="printerexample" default="all">
-  
-  
-  <property file="build.properties"/>
-  <!-- Uncomment the following property if no tests compilation is needed -->
-  <!-- 
-  <property name="skip.tests" value="true"/>
-   -->
-  
-  <!-- Compiler options -->
-  
-  <property name="compiler.debug" value="on"/>
-  <property name="compiler.generate.no.warnings" value="off"/>
-  <property name="compiler.args" value=""/>
-  <property name="compiler.max.memory" value="700m"/>
-  <patternset id="ignored.files">
-    <exclude name="**/*.hprof/**"/>
-    <exclude name="**/*.pyc/**"/>
-    <exclude name="**/*.pyo/**"/>
-    <exclude name="**/*.rbc/**"/>
-    <exclude name="**/*.yarb/**"/>
-    <exclude name="**/*~/**"/>
-    <exclude name="**/.DS_Store/**"/>
-    <exclude name="**/.git/**"/>
-    <exclude name="**/.hg/**"/>
-    <exclude name="**/.svn/**"/>
-    <exclude name="**/CVS/**"/>
-    <exclude name="**/__pycache__/**"/>
-    <exclude name="**/_svn/**"/>
-    <exclude name="**/vssver.scc/**"/>
-    <exclude name="**/vssver2.scc/**"/>
-  </patternset>
-  <patternset id="library.patterns">
-    <include name="*.war"/>
-    <include name="*.swc"/>
-    <include name="*.zip"/>
-    <include name="*.egg"/>
-    <include name="*.ear"/>
-    <include name="*.ane"/>
-    <include name="*.jar"/>
-    <include name="*.klib"/>
-  </patternset>
-  <patternset id="compiler.resources">
-    <exclude name="**/?*.java"/>
-    <exclude name="**/?*.form"/>
-    <exclude name="**/?*.class"/>
-    <exclude name="**/?*.groovy"/>
-    <exclude name="**/?*.scala"/>
-    <exclude name="**/?*.flex"/>
-    <exclude name="**/?*.kt"/>
-    <exclude name="**/?*.clj"/>
-    <exclude name="**/?*.aj"/>
-  </patternset>
-  
-  <!-- JDK definitions -->
-  
-  <property name="jdk.bin.11" value="${jdk.home.11}/bin"/>
-  <path id="jdk.classpath.11">
-    <fileset dir="${jdk.home.11}">
-      <include name="../jbr!/java.base"/>
-      <include name="../jbr!/java.compiler"/>
-      <include name="../jbr!/java.datatransfer"/>
-      <include name="../jbr!/java.desktop"/>
-      <include name="../jbr!/java.instrument"/>
-      <include name="../jbr!/java.logging"/>
-      <include name="../jbr!/java.management"/>
-      <include name="../jbr!/java.management.rmi"/>
-      <include name="../jbr!/java.naming"/>
-      <include name="../jbr!/java.net.http"/>
-      <include name="../jbr!/java.prefs"/>
-      <include name="../jbr!/java.rmi"/>
-      <include name="../jbr!/java.scripting"/>
-      <include name="../jbr!/java.se"/>
-      <include name="../jbr!/java.security.jgss"/>
-      <include name="../jbr!/java.security.sasl"/>
-      <include name="../jbr!/java.smartcardio"/>
-      <include name="../jbr!/java.sql"/>
-      <include name="../jbr!/java.sql.rowset"/>
-      <include name="../jbr!/java.transaction.xa"/>
-      <include name="../jbr!/java.xml"/>
-      <include name="../jbr!/java.xml.crypto"/>
-      <include name="../jbr!/javafx.base"/>
-      <include name="../jbr!/javafx.controls"/>
-      <include name="../jbr!/javafx.fxml"/>
-      <include name="../jbr!/javafx.graphics"/>
-      <include name="../jbr!/javafx.media"/>
-      <include name="../jbr!/javafx.swing"/>
-      <include name="../jbr!/javafx.web"/>
-      <include name="../jbr!/jdk.accessibility"/>
-      <include name="../jbr!/jdk.aot"/>
-      <include name="../jbr!/jdk.attach"/>
-      <include name="../jbr!/jdk.charsets"/>
-      <include name="../jbr!/jdk.compiler"/>
-      <include name="../jbr!/jdk.crypto.cryptoki"/>
-      <include name="../jbr!/jdk.crypto.ec"/>
-      <include name="../jbr!/jdk.dynalink"/>
-      <include name="../jbr!/jdk.httpserver"/>
-      <include name="../jbr!/jdk.internal.ed"/>
-      <include name="../jbr!/jdk.internal.jvmstat"/>
-      <include name="../jbr!/jdk.internal.le"/>
-      <include name="../jbr!/jdk.internal.vm.ci"/>
-      <include name="../jbr!/jdk.internal.vm.compiler"/>
-      <include name="../jbr!/jdk.internal.vm.compiler.management"/>
-      <include name="../jbr!/jdk.jdi"/>
-      <include name="../jbr!/jdk.jdwp.agent"/>
-      <include name="../jbr!/jdk.jfr"/>
-      <include name="../jbr!/jdk.jsobject"/>
-      <include name="../jbr!/jdk.localedata"/>
-      <include name="../jbr!/jdk.management"/>
-      <include name="../jbr!/jdk.management.agent"/>
-      <include name="../jbr!/jdk.management.jfr"/>
-      <include name="../jbr!/jdk.naming.dns"/>
-      <include name="../jbr!/jdk.naming.rmi"/>
-      <include name="../jbr!/jdk.net"/>
-      <include name="../jbr!/jdk.pack"/>
-      <include name="../jbr!/jdk.scripting.nashorn"/>
-      <include name="../jbr!/jdk.scripting.nashorn.shell"/>
-      <include name="../jbr!/jdk.sctp"/>
-      <include name="../jbr!/jdk.security.auth"/>
-      <include name="../jbr!/jdk.security.jgss"/>
-      <include name="../jbr!/jdk.unsupported"/>
-      <include name="../jbr!/jdk.xml.dom"/>
-      <include name="../jbr!/jdk.zipfs"/>
-    </fileset>
-  </path>
-  
-  <property name="project.jdk.home" value="${jdk.home.11}"/>
-  <property name="project.jdk.bin" value="${jdk.bin.11}"/>
-  <property name="project.jdk.classpath" value="jdk.classpath.11"/>
-  
-  
-  <!-- Project Libraries -->
-  
-  <path id="library.printer.classpath">
-    <pathelement location="${basedir}/lib/Printer.jar"/>
-  </path>
-  
-  
-  <!-- Global Libraries -->
-  
-  <!-- Modules -->
-  
-  
-  <!-- Module PrinterExample -->
-  
-  <dirname property="module.printerexample.basedir" file="${ant.file}"/>
-  
-  
-  <property name="module.jdk.home.printerexample" value="${project.jdk.home}"/>
-  <property name="module.jdk.bin.printerexample" value="${project.jdk.bin}"/>
-  <property name="module.jdk.classpath.printerexample" value="${project.jdk.classpath}"/>
-  
-  <property name="compiler.args.printerexample" value="-encoding UTF-8 -source 11 -target 11 ${compiler.args}"/>
-  
-  <property name="printerexample.output.dir" value="${module.printerexample.basedir}/out/production/PrinterExample"/>
-  <property name="printerexample.testoutput.dir" value="${module.printerexample.basedir}/out/test/PrinterExample"/>
-  
-  <path id="printerexample.module.bootclasspath">
-    <!-- Paths to be included in compilation bootclasspath -->
-  </path>
-  
-  <path id="printerexample.module.production.classpath">
-    <path refid="${module.jdk.classpath.printerexample}"/>
-    <path refid="library.printer.classpath"/>
-  </path>
-  
-  <path id="printerexample.runtime.production.module.classpath">
-    <pathelement location="${printerexample.output.dir}"/>
-    <path refid="library.printer.classpath"/>
-  </path>
-  
-  <path id="printerexample.module.classpath">
-    <path refid="${module.jdk.classpath.printerexample}"/>
-    <pathelement location="${printerexample.output.dir}"/>
-    <path refid="library.printer.classpath"/>
-  </path>
-  
-  <path id="printerexample.runtime.module.classpath">
-    <pathelement location="${printerexample.testoutput.dir}"/>
-    <pathelement location="${printerexample.output.dir}"/>
-    <path refid="library.printer.classpath"/>
-  </path>
-  
-  
-  <patternset id="excluded.from.module.printerexample">
-    <patternset refid="ignored.files"/>
-  </patternset>
-  
-  <patternset id="excluded.from.compilation.printerexample">
-    <patternset refid="excluded.from.module.printerexample"/>
-  </patternset>
-  
-  <path id="printerexample.module.sourcepath">
-    <dirset dir="${module.printerexample.basedir}">
-      <include name="src"/>
-    </dirset>
-  </path>
-  
-  
-  <target name="compile.module.printerexample" depends="compile.module.printerexample.production,compile.module.printerexample.tests" description="Compile module PrinterExample"/>
-  
-  <target name="compile.module.printerexample.production" description="Compile module PrinterExample; production classes">
-    <mkdir dir="${printerexample.output.dir}"/>
-    <javac destdir="${printerexample.output.dir}" debug="${compiler.debug}" nowarn="${compiler.generate.no.warnings}" memorymaximumsize="${compiler.max.memory}" fork="true" executable="${module.jdk.bin.printerexample}/javac">
-      <compilerarg line="${compiler.args.printerexample}"/>
-      <bootclasspath refid="printerexample.module.bootclasspath"/>
-      <classpath refid="printerexample.module.production.classpath"/>
-      <src refid="printerexample.module.sourcepath"/>
-      <patternset refid="excluded.from.compilation.printerexample"/>
-    </javac>
-    
-    <copy todir="${printerexample.output.dir}">
-      <fileset dir="${module.printerexample.basedir}/src">
-        <patternset refid="compiler.resources"/>
-        <type type="file"/>
-      </fileset>
-    </copy>
-  </target>
-  
-  <target name="compile.module.printerexample.tests" depends="compile.module.printerexample.production" description="compile module PrinterExample; test classes" unless="skip.tests"/>
-  
-  <target name="clean.module.printerexample" description="cleanup module">
-    <delete dir="${printerexample.output.dir}"/>
-    <delete dir="${printerexample.testoutput.dir}"/>
-  </target>
-  
-  <target name="init" description="Build initialization">
-    <!-- Perform any build initialization in this target -->
-  </target>
-  
-  <target name="clean" depends="clean.module.printerexample" description="cleanup all"/>
-  
-  <target name="build.modules" depends="init, clean, compile.module.printerexample" description="build all modules"/>
-  
-  <target name="all" depends="build.modules" description="build all"/>
+<project name="PrinterExample" basedir="." default="build">
+
+    <property name="src.dir"     value="src"/>
+    <property name="build.dir"   value="build"/>
+    <property name="classes.dir" value="${build.dir}/classes"/>
+    <property name="jar.dir"     value="${build.dir}/jar"/>
+    <property name="main-class"  value="cz.cvut.fit.prl.sudoku.Sudoku"/>
+    <property name="lib.dir"     value="lib"/>
+
+    <path id="classpath">
+        <fileset dir="${lib.dir}" includes="**/*.jar"/>
+    </path>
+
+    <path id="run-classpath">
+        <path refid="classpath"/>
+        <path location="${jar.dir}/${ant.project.name}.jar"/>
+    </path>
+
+    <target name="clean">
+        <delete dir="${build.dir}"/>
+    </target>
+
+    <target name="compile">
+        <mkdir dir="${classes.dir}"/>
+        <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath"/>
+    </target>
+
+    <target name="jar" depends="compile">
+        <mkdir dir="${jar.dir}"/>
+        <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
+            <manifest>
+                <attribute name="Main-Class" value="${main-class}"/>
+            </manifest>
+        </jar>
+    </target>
+
+    <target name="run" depends="jar">
+        <echo>Classpath is ${toString:run-classpath}</echo>
+        <java classname="${main-class}" fork="true" classpathref="run-classpath"/>
+    </target>
+
+    <target name="build" depends="clean,jar"/>
+    <target name="main" depends="run"/>
+
 </project>
